--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.61.1",
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.17",
     "zod": "^4.0.14"
